--- a/.github/workflows/Terraform-starter-code.yaml
+++ b/.github/workflows/Terraform-starter-code.yaml
@@ -33,8 +33,9 @@ jobs:
       
         with:
           # Using GitHub secrets for secure credential storage
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # Secret variable
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # Secret variable
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # Secret variable
+          aws-key: ${{ vars.AWS_KEY }} # aws key
           aws-region: ${{ vars.AWS_REGION }}  # Reference the repository variable
 
       # Step 3: Install Terraform
